Bugfix: modals positioned behind image notes

--- a/src/scss/layout/_modal.scss
+++ b/src/scss/layout/_modal.scss
@@ -5,7 +5,7 @@ re-modal-container {
     left: 0;
     right: 0;
     margin: 4rem 1rem 0;
-    z-index: 50;
+    z-index: 100;
     pointer-events: none;
 
     /* Modal Styling Overrides */
